<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="org.bl.coffeecounter.ui.main.MainViewModel" />
    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/labelTitle"
            style="@style/coffeecounter_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/the_coffeecount"
            android:textAlignment="center" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/primaryLightColor"
            app:cardCornerRadius="5dp">


            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.main.MainFragment">


                <TextView
                    android:id="@+id/labelToday"
                    style="@style/coffeecount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/today"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/labelThisMonth"
                    style="@style/coffeecount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/this_month"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelThisWeek" />

                <TextView
                    android:id="@+id/lableThisYear"
                    style="@style/coffeecount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/this_year"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelThisMonth" />


                <TextView
                    android:id="@+id/labelTotal"
                    style="@style/coffeecount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/total"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lableThisYear" />


                <TextView
                    android:id="@+id/labelThisWeek"
                    style="@style/coffeecount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/this_week"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelToday" />

                <TextView
                    android:id="@+id/coffeeCountToday"
                    style="@style/coffeecount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@{viewModel.coffeeCountToday.toString()}"
                    app:layout_constraintBottom_toBottomOf="@+id/labelToday"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="0" />

                <TextView
                    android:id="@+id/coffeeCountThisWeek"
                    style="@style/coffeecount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.coffeeCountThisWeek.toString()}"
                    app:layout_constraintBottom_toBottomOf="@+id/labelThisWeek"
                    app:layout_constraintStart_toStartOf="@+id/coffeeCountToday"
                    tools:text="0" />

                <TextView
                    android:id="@+id/coffeeCountThisMonth"
                    style="@style/coffeecount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.coffeeCountThisMonth.toString()}"
                    app:layout_constraintBottom_toBottomOf="@+id/labelThisMonth"
                    app:layout_constraintStart_toStartOf="@+id/coffeeCountToday"
                    tools:text="0" />

                <TextView
                    android:id="@+id/coffeeCountThisYear"
                    style="@style/coffeecount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.coffeeCountThisYear.toString()}"
                    app:layout_constraintBottom_toBottomOf="@+id/lableThisYear"
                    app:layout_constraintStart_toStartOf="@+id/coffeeCountToday"
                    tools:text="0" />

                <TextView
                    android:id="@+id/coffeeCountTotal"
                    style="@style/coffeecount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Integer.toString(viewModel.allCoffee.size)}"
                    app:layout_constraintBottom_toBottomOf="@+id/labelTotal"
                    app:layout_constraintStart_toStartOf="@+id/coffeeCountThisYear"
                    tools:text="0" />


                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.addCoffeeManually()}"
                    android:text="+"
                    app:layout_constraintBottom_toBottomOf="@+id/resetButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/resetButton" />

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{() -> viewModel.deleteLastCoffee()}"
                    android:text="-"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelTotal" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/primaryLightColor"
            app:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/balance"
                    style="@style/coffeecount_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@{viewModel.balance.toString()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="0.00 Eur" />

                <Button
                    android:id="@+id/paymentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Aufladen"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelBalance" />

                <TextView
                    android:id="@+id/labelBalance"
                    style="@style/coffeecount_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>




</layout>